--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,37 @@
-cd aider-website
-mkdir -p .github/workflows
-cat << 'EOF' > .github/workflows/push-to-render.yml
-name: Push to GitHub for Render Deployment
+name: Setup Aider Project and Push to Render
 
 on:
+  workflow_dispatch:  # Allows manual triggering
   push:
     branches:
       - main
 
 jobs:
-  deploy:
+  setup:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}  # Use default GitHub token
 
-      - name: Set up Git
+      - name: Set up Bash
+        run: |
+          echo "Setting up environment..."
+          sudo apt-get update
+          sudo apt-get install -y bash
+
+      - name: Run setup script
+        run: |
+          chmod +x setup_aider_project.sh
+          ./setup_aider_project.sh
+
+      - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-
-      - name: Push to GitHub
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Auto-generate Aider project files"
           git push origin main
-EOF
-git add .github/workflows/push-to-render.yml
-git commit -m "Add GitHub Actions workflow for Render deployment"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Authenticate push
