--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GITHUB_TOKEN=
-OPENAI_API_KEY=
-FLASK_SECRET_KEY=
+GITHUB_TOKEN=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
+OPENAI_API_KEY=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
+FLASK_SECRET_KEY=245245
